# nds_loader

./: CMakeLists.txt  README.md  nds.cpp  nds.sln  nds.vcxproj
cmake_modules/: FindIDASDK.cmake
loader/: nds.ldw
